# hybrid-music-source-separation

./: .gitignore  README.md  convert_to_wav.py  download_data.py  pyproject.toml
configs/: spectrogram.yaml
runs/spectrogram_run_01/: config.json
src/: experiment.py  infer.py  losses.py  metrics.py  train.py  train_hybrid.py  train_hybrid_sigmoid.py  train_spectrogram.py  train_waveform.py  trainer.py
src/data/: dataset.py
src/models/: base.py
src/models/hybrid/: model.py
src/models/spectrogram/: decoder.py  encoder.py  model.py  stft.py
src/models/waveform/: decoder.py  encoder.py  model.py
